objects/Reusable_Content__c.object
<CustomObject>
    <description>Reusable content used across multiple articles.</description>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Publish updated article flag</description>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>numOnlineDraft__c</fullName>
        <label># of Online/Draft References</label>
        <summaryForeignKey>ReusableContentKav__c.ReusableContentId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Reusable Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>numOnlineDraft__c</columns>
        <columns>Title__c</columns>
        <columns>Summary__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Content Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reusable Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>